Cleanup, mostly deprecated Smack usages and Java 8+ constructs